--- a/stylesheet.css
+++ b/stylesheet.css
@@ -102,3 +102,27 @@ details[open] {
   text-align:left;
 
 }
+
+
+.container {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+/* Style par défaut pour mobile (1 colonne) */
+.column {
+  flex: 1 1 100%; /* chaque colonne occupe 100% de l'espace */
+}
+
+/* Style pour les écrans d’ordinateur (3 colonnes) */
+@media (min-width: 768px) {
+  .column {
+      flex: 1 1 33.33%; /* chaque colonne occupe environ 1/3 de l'espace */
+  }
+}
+
+
+#animated-title {
+  overflow: hidden;
+  white-space: nowrap;
+}
